<resources>
    <string name="app_name">AlumPerilaApp</string>
    <string name="title_catalog">Каталог</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_podrobnee">Подробнее о нашей компании</string>
    <string name="title_enterPhoneNum">EnterPhoneNum</string>
    <string name="title_enterCode">EnterCode</string>
    <string name="title_enterKeyAdmin">EnterKeyAdmin</string>
    <string name="title_admin">Admin</string>
</resources>