<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_enterPhoneNum">

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="com.example.alumperilaapp.ui.catalog.CatalogFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_catalog" >
        <action
            android:id="@+id/action_navigation_catalog_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_catalog_to_navigation_notifications"
            app:destination="@id/navigation_account" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.alumperilaapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_catalog"
            app:destination="@id/navigation_catalog"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_account" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_podrobnee"
            app:destination="@id/navigation_podrobnee" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.alumperilaapp.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_catalog"
            app:destination="@id/navigation_catalog" />
    </fragment>
    <fragment
        android:id="@+id/navigation_podrobnee"
        android:name="com.example.alumperilaapp.ui.podrobnee.PodrobneeFragment"
        android:label="@string/title_podrobnee"
        tools:layout="@layout/fragment_podrobnee">
        <action
            android:id="@+id/action_navigation_podrobnee_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_enterPhoneNum"
        android:name="com.example.alumperilaapp.ui.enterPhoneNum.EnterPhoneNumFragment"
        android:label="@string/title_enterPhoneNum"
        tools:layout="@layout/fragment_enter_phone_num">
        <action
            android:id="@+id/action_navigation_enterPhoneNum_to_enterCodeFragment"
            app:destination="@id/navigation_enterCode" />
        <action
            android:id="@+id/action_navigation_enterPhoneNum_to_enterKeyAdminFragment"
            app:destination="@id/navigation_enterKeyAdminFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_enterCode"
        android:name="com.example.alumperilaapp.ui.enterCode.EnterCodeFragment"
        android:label="@string/title_enterCode"
        tools:layout="@layout/fragment_enter_code">
        <action
            android:id="@+id/action_enterCodeFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_enterKeyAdminFragment"
        android:name="com.example.alumperilaapp.ui.enterKayAdmin.EnterKeyAdminFragment"
        android:label="@string/title_enterKeyAdmin"
        tools:layout="@layout/fragment_enter_key_admin"/>
</navigation>